--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
+    <meta name="google-signin-client_id" content="331764866659-fbaup5l7lqprdn8shdj0i20ve9t5qnth.apps.googleusercontent.com">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
