Clean up Codebase

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rebay</title>
     <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
     <meta name="google-signin-client_id" content="331764866659-fbaup5l7lqprdn8shdj0i20ve9t5qnth.apps.googleusercontent.com">
   </head>
