Add loader to API reliant components

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Rebay</title>
+    <script src="https://kit.fontawesome.com/b1f4328eaa.js"></script>
     <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
     <meta name="google-signin-client_id" content="331764866659-fbaup5l7lqprdn8shdj0i20ve9t5qnth.apps.googleusercontent.com">
   </head>
